@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods

'title Domain Model

'class Platform {
'  -description
'}


class GSM{
    name
    email
    phone number
    identification document
}


class Vehicle{
    Brand
    Model
    Type
    Tare
    Gross Weight
    Current Km
    Register Date
    Acquisition Date
    Maintenance/Check-up
}

class Agenda{

}


GSM "1" -- "*" Vehicle : registers >
GSM "1" -- "*" "Agenda" : create >
Vehicle "1" -- "1" "Agenda" : add an entry on >


@enduml